<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SimpleCalculator">

    <TextView
        android:id="@+id/CalTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview1"
        android:textColor="#A33131"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        android:gravity="center" />


    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:hint="@string/number1"
        android:inputType="numberDecimal"
        android:textColor="@color/black">

    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/number2"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        >
    </EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button1"
            android:layout_marginLeft="3dp"
            android:backgroundTint="#1AC321"
            >

        </Button>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button2"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#F81D1D"
            >
        </Button>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button3"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#EF584D"
            >
        </Button>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button4"
            android:layout_marginLeft="5dp"
            >
        </Button>

    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button5"
        android:backgroundTint="#FFC107"
        >
    </Button>

    <TextView
        android:id="@+id/showTextview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/resultShow"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:background="#F8F2F2"/>

</LinearLayout>